--- a/thirdpro.css
+++ b/thirdpro.css
@@ -8,9 +8,6 @@ text-align: center;}
 
 .container{height:70vh;
     display: flex;
-    
-    
-    
     justify-content: center;
 
 }
@@ -21,6 +18,7 @@ text-align: center;}
     flex-wrap: wrap;
     justify-content: center;
     gap: 1.5vmin;
+    padding: 10px;
     
 
 }
@@ -50,7 +48,7 @@ background-color: #ffffc7;
 }
 h1{margin-bottom: 3%;}
 
-#msg{color: #ffffc7;
+#msg{color:red;
     font-size: 5vmin;
 }
 .msg-container{height: 25vmin;}
